src/objects/NVMContactWorld_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>NVMContactWorld_baseURL__c</fullName>
        <label>NVMContactWorld_baseURL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld_clientId__c</fullName>
        <label>NVMContactWorld_clientId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld_clientSecret__c</fullName>
        <label>NVMContactWorld_clientSecret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>NVMContactWorld Settings</label>
</CustomObject>